--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     background-color: #120f14;
     color: #eef0f2;
+    font-family: 'Open Sans', Arial, sans-serif; 
 }
 
 ul{
@@ -9,4 +10,17 @@ ul{
 
 h1{
 	text-align: center;
+}
+
+h1#header{
+	font-size: 50px;
+	font-weight: 700; 
+}
+
+h2#header{
+	font-size: 25px;
+}
+
+.section-title{
+	font-size: 35px; 
 }
