--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@ h1{
 	text-align: center;
 }
 
-h1#header{
+h1.header{
 	font-size: 50px;
 	font-weight: 700; 
 }
 
-h2#header{
+h2.header{
 	font-size: 25px;
 }
 
